Bug 992850 - Cache Moz2D path for length or position measuring. r=jwatt, a=sledru