content/svg/content/src/SVGPathData.h
@@ -190,6 +190,7 @@ protected:
   nsresult CopyFrom(const SVGPathData& rhs);
 
   float& operator[](uint32_t aIndex) {
+    mCachedPath = nullptr;
     return mData[aIndex];
   }
 
@@ -198,12 +199,14 @@ protected:
    * increased, in which case the list will be left unmodified.
    */
   bool SetLength(uint32_t aLength) {
+    mCachedPath = nullptr;
     return mData.SetLength(aLength);
   }
 
   nsresult SetValueFromString(const nsAString& aValue);
 
   void Clear() {
+    mCachedPath = nullptr;
     mData.Clear();
   }
 
@@ -217,10 +220,11 @@ protected:
 
   nsresult AppendSeg(uint32_t aType, ...); // variable number of float args
 
-  iterator begin() { return mData.Elements(); }
-  iterator end() { return mData.Elements() + mData.Length(); }
+  iterator begin() { mCachedPath = nullptr; return mData.Elements(); }
+  iterator end() { mCachedPath = nullptr; return mData.Elements() + mData.Length(); }
 
   FallibleTArray<float> mData;
+  mutable RefPtr<gfx::Path> mCachedPath;
 };
 
 
